feat: basic layout for main page

--- a/app/renderer/styles/Application.less
+++ b/app/renderer/styles/Application.less
@@ -9,6 +9,8 @@ html, body, #root {
 
 .app-container, .page {
   width:100%;
+  min-width: 1200px;
+  overflow-x:scroll;
   height:100%;
   display: flex;
   align-items: center;
