--- a/app/renderer/styles/Application.less
+++ b/app/renderer/styles/Application.less
@@ -10,7 +10,7 @@ html, body, #root {
 .app-container, .page {
   width:100%;
   min-width: 1200px;
-  overflow-x:scroll;
+  overflow-x:auto;
   height:100%;
   display: flex;
   align-items: center;
