--- a/app/renderer/styles/Main.less
+++ b/app/renderer/styles/Main.less
@@ -11,7 +11,7 @@
     width: 40%;
     background-color: #eee;
     padding: 20px;
-    overflow-y:scroll;
+    overflow-y:auto;
   }
 
   .m-right {
