feat: add query profile and query condition editor

--- a/app/renderer/styles/Main.less
+++ b/app/renderer/styles/Main.less
@@ -102,3 +102,28 @@
 .m-action-button {
   margin-left:10px;
 }
+
+.m-cr-field {
+  width:100px;
+  min-width:100px;
+  margin-right:10px !important;
+}
+
+.m-cr-op {
+  width:90px;
+  min-width: 90px;
+  margin-right:10px !important;
+}
+
+.m-cr-value {
+  width:auto !important;
+  min-width: 0 !important;
+  min-width: 0;
+  flex-grow: 1;
+  margin-right:5px !important;
+}
+
+.m-cr-button {
+  min-width:32px;
+  margin-left:5px;
+}
