--- a/app/renderer/styles/Main.less
+++ b/app/renderer/styles/Main.less
@@ -5,18 +5,21 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    background-color: #eee;
   }
 
   .m-left {
     width: 40%;
-    background-color: #eee;
     padding: 20px;
     overflow-y:auto;
   }
 
   .m-right {
     flex-grow: 1;
-    justify-content: center;
+    justify-content: flex-start;
+    padding-top:20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -25,7 +28,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 20px 10px 20px 10px;
+  margin: 2px 10px 20px 10px;
 }
 
 .m-queries {
@@ -126,4 +129,21 @@
 .m-cr-button {
   min-width:32px;
   margin-left:5px;
+}
+
+.m-query-result {
+  flex-grow: 1;
+  margin-bottom: 10px;
+  background-color: white;
+  border-radius: 4px;
+
+  .ant-table-placeholder {
+    border-bottom: none !important;
+  }
+}
+
+.m-c-query-result-action {
+  height:50px;
+  background-color: white;
+  border-radius: 2px;
 }
