feat: hookup query api and UI

--- a/app/renderer/styles/Main.less
+++ b/app/renderer/styles/Main.less
@@ -147,3 +147,34 @@
   background-color: white;
   border-radius: 2px;
 }
+
+.m-c-query-result-file-name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  .file-icon {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    svg {
+      width: 32px;
+      height: 32px;
+    }
+
+    .file-ext {
+      font-family: Helvetica, sans-serif;
+      font-size: 9px;
+      position: absolute;
+      color: #fff;
+      margin-top:21px;
+    }
+  }
+
+  .file-name {
+    margin-left:5px;
+  }
+}
