feat: hydrate file path information

--- a/app/renderer/styles/Main.less
+++ b/app/renderer/styles/Main.less
@@ -148,7 +148,7 @@
   border-radius: 2px;
 }
 
-.m-c-query-result-file-name {
+.m-c-query-result-file-icon-col {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -174,7 +174,7 @@
     }
   }
 
-  .file-name {
+  .col-content {
     margin-left:5px;
   }
 }
